<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPureWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeActivity">

    <android.support.design.widget.NavigationView
        android:id="@+id/menu_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPureWhite"
        app:headerLayout="@layout/header"
        app:menu="@menu/drawermenu" />
    <ScrollView
        android:background="@color/colorPureWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.constraint.ConstraintLayout
            android:background="@color/colorPureWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:visibility="invisible"
                android:id="@+id/loading_circle_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:translationZ="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioPickUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20sp"
                    android:checked="true"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/pickup"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/delivery"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="20sp" />
            </RadioGroup>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="310dp"
                android:layout_height="330dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlueQR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPureWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonActivateCamera"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/custom_button_transparent"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/aktifkankamera"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPureWhite"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonInputManual"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <Button
                    android:id="@+id/buttonInputManual"
                    android:layout_width="105dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/custom_button_transparent"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/manual"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPureWhite"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonActivateCamera"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textViewAtau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/keterangan"
                android:textColor="@color/colorPureBlack"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/linear2"
                app:layout_constraintStart_toEndOf="@+id/linear1"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <TableRow
                android:id="@+id/linear1"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:background="@color/colorBlueQR"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textViewAtau"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></TableRow>

            <TableRow
                android:id="@+id/linear2"
                android:layout_width="120dp"
                android:layout_height="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="31dp"
                android:background="@color/colorBlueQR"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textViewAtau"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"></TableRow>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="310dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorBlueLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewAtau">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/nama"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/posisi"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/kodeTulisan"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/mark"
                    android:textColor="@color/colorPureBlack"
                    app:layout_constraintBottom_toTopOf="@+id/textView4"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/mark"
                    android:textColor="@color/colorPureBlack"
                    app:layout_constraintBottom_toTopOf="@+id/textView6"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/lato_medium"
                    android:text="@string/mark"
                    android:textColor="@color/colorPureBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textViewNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewPosisi"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewPosisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/lato_medium"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewKode"
                    app:layout_constraintStart_toEndOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textViewNama" />

                <TextView
                    android:id="@+id/textViewKode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="@font/lato_medium"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/textViewPosisi" />
            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textViewDoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/lato_medium"
                android:text="@string/doa"
                android:textColor="@color/colorPureBlack"
                android:textSize="19sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.v4.widget.DrawerLayout>